[package]
name = "tge"
version = "0.0.4"
edition = "2021"
authors = ["TakWolf <takwolf@foxmail.com>"]
description = "A lightweight cross-platform 2D game framework written in pure Rust and based on OpenGL 3.3+."
readme = "README.md"
repository = "https://github.com/TakWolf/tge"
license = "MIT OR Apache-2.0"
keywords = ["game", "graphics"]
categories = ["game-engines"]
exclude = ["examples/**", "assets/**"]
publish = false

[dependencies]
winit = "0.26.1"
glutin = "0.28.0"
glow = "0.16.0"
glam = "0.29.2"
image = "0.25.5"
fontdue = "0.9.2"
gilrs = "0.11.0"

[dev-dependencies]
rand = "0.9.0"
chrono = "0.4.39"

[profile.dev]
opt-level = 3
